--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@fontsource/archivo": "^5.1.0",
     "@fontsource/darker-grotesque": "^5.1.0",
     "astro": "^4.16.8",
     "tailwindcss": "^3.4.14",
