--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/archivo": "^5.1.0",
     "@fontsource/darker-grotesque": "^5.1.0",
     "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.8",
