--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource/archivo": "^5.1.0",
     "@fontsource/darker-grotesque": "^5.1.0",
+    "@playform/compress": "^0.1.6",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react": "^18.3.12",
