--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vercel/analytics": "^1.4.1",
     "astro": "^4.16.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
